SET(Exercise07_SRC
  Ex07.cpp
  MeshObj.cpp
  ObjLoader.cpp
  Trackball.cpp
)
ADD_EXECUTABLE(ex07 ${Exercise07_SRC})
#TARGET_LINK_LIBRARIES(ex07 ${OpenCV_LIBRARIES} ${OpenGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ex07
    ${OpenCV_LIBRARIES}
    ${OpenGL_LIBRARIES}
    ${GLUT_LIBRARIES}
    ${GLEW_LIBRARIES}
    ${GL_LIBRARY}
    ${OPENGL_LIBRARIES}
    )
