SET(Exercise08_SRC
  Ex08.cpp
  MeshObj.cpp
  ObjLoader.cpp
  Trackball.cpp
)
ADD_EXECUTABLE(ex08 ${Exercise08_SRC})
#TARGET_LINK_LIBRARIES(ex08 ${OpenCV_LIBRARIES} ${OpenGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES})
TARGET_LINK_LIBRARIES(ex08
    ${OpenCV_LIBRARIES}
    ${OpenGL_LIBRARIES}
    ${GLUT_LIBRARIES}
    ${GLEW_LIBRARIES}
    ${GL_LIBRARY}
    ${OPENGL_LIBRARIES}
    )
